src/scss/general/global.scss
html {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

.container {
  margin: 0 auto;
  padding: 0 15px;
  max-width: 1230px;
}

.main-wrapper {
  display: flex;
  flex: 0 0;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}

.hidden {
  display: none;
}

body {
  overflow-x: hidden;
}

.disable-scroll {
  overflow: hidden;

  body {
    overflow: hidden;
  }
}

@media only screen and (max-width: 750px) {
  .disable-scroll {
    body {
      padding-right: 0;
    }
  }
}

